--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-map-gl": "^6.1.0",
+    "jotai": "^1.3.7",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-map-gl": "^6.1.17"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
